<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="home_indicator">bottom_point</string>
    <string name="wallpaper_scrolling">all</string>
    <string name="sharedUserId" />
    <string name="process" />
    <string name="application_name">Launcher</string>
    <string name="folder_name">Folder</string>
    <string name="chooser_wallpaper">Select wallpaper from</string>
    <string name="activity_not_found">Application is not installed on your phone.</string>
    <string name="cancel_action">Cancel</string>
    <string name="menu_item_add_item">Add to Home screen</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="group_folder">New folder</string>
    <string name="group_live_folders">Folders</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="title_select_shortcut">Select shortcut</string>
    <string name="title_select_live_folder">Select folder</string>
    <string name="menu_add">Add</string>
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu_search">Search</string>
    <string name="menu_workspace_preview">Preview</string>
    <string name="menu_back_desktop">Back to home</string>
    <string name="menu_settings">Settings</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an application to add shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows an application to remove shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows an application to read the settings and shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows an application to change the settings and shortcuts in Home.</string>
    <string name="start_activity_failed">Failed to start, please try again</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="menu_edit">Edit widgets</string>
    <string name="menu_sort">Sort home screen icons</string>
    <string name="menu_launcher_setting">Launcher settings</string>
    <string name="editing_tips">Add or edit widget</string>
    <string name="cant_remove_system_app">Unable to remove system application</string>
    <string name="uninstall_body_format">Remove application \"%s\"?</string>
    <string name="uninstall">Uninstall</string>
    <string name="cant_remove_folder">Unable to remove non-empty folder</string>
    <string name="failed_to_drop">Moving failed</string>
    <string name="failed_to_drop_widget_nospace">Failed to move, not enough space!</string>
    <string name="failed_to_drop_widget_invalid">Widget invalid</string>
    <string name="failed_to_delete_temporary">Failed to delete, please try again.</string>
    <string name="widget_favorite_contacts_label">Favorite contacts</string>
    <string name="widget_favorite_contacts_edit">Editor</string>
    <string name="widget_favorite_contacts_style">Switch size</string>
    <string name="edit_folder_title">Modify folder title</string>
    <string name="confirm_btn_label">OK</string>
    <string name="cancel_btn_label">Cancel</string>
    <string name="sort_by_not_defined">Sort by default</string>
    <string name="sort_by_frequency">Sort by usage</string>
    <string name="sort_by_abc">Sort by name</string>
    <string name="encryption">Encryption</string>
    <string name="preferences_title">Launcher Settings</string>
    <string name="preferences_general_title">General settings</string>
    <string name="pref_keep_in_memory_title">Keep in memory</string>
    <string name="pref_keep_in_memory_summary">Keeps launcher from exiting in low memory.</string>
    <string name="pref_render_in_truecolor_title">High quality graphics</string>
    <string name="pref_render_in_truecolor_summary">Turning off this option will improve drawing performance.</string>
    <string name="pref_enable_drawing_cache_title">Drawing Cache</string>
    <string name="pref_enable_drawing_cache_summary">Turn off to free up memory, will cause some lag</string>
    <string name="pref_icon_shadow_title">Icon shadow</string>
    <string name="pref_icon_shadow_summary">Turn on/off the shadow on home screen icons.</string>
    <string name="pref_screen_transformation_type_title">Transition effects</string>
    <string name="transformation_type_classic">Classic</string>
    <string name="transformation_type_classic_no_overshoot">Classic (No overshoot)</string>
    <string name="transformation_type_crossfade">Crossfade</string>
    <string name="transformation_type_falldown">Falldown</string>
    <string name="transformation_type_cube">3D Cube</string>
    <string name="transformation_type_leftpage">Page</string>
    <string name="transformation_type_stack">Cascading</string>
    <string name="transformation_type_rotate">Rotation</string>
    <string name="widget_gadget_player">Music</string>
    <string name="buffering">Buffering...</string>
    <string name="emptyplaylist">Playlist is empty</string>
    <string name="unknown_artist_name">Unknown Artist</string>
    <string name="global_search_hint">Enter Keyword(s) to Search</string>
    <string name="widget_global_search">Global Search</string>
    <string name="gadget_clock_12_label">Clock 1x2</string>
    <string name="gadget_clock_22_label">Clock 2x2</string>
    <string name="gadget_clock_24_label">Clock 2x4</string>
    <string name="gadget_photo_44_label">Photoframe 4x4</string>
    <string name="gadget_photo_22_label">Photoframe 2x2</string>
    <string name="gadget_photo_24_label">Photoframe 2x4</string>
    <string name="gadget_load_error">Widget loading...</string>
    <string name="invalid_contact_shortcut">Invalid contact shortcut</string>
    <string name="guide_tips_editing_mode">Hold the widget below to drag it onto the screen</string>
    <string name="durationformatshort">%2$2d:%5$02d</string>
    <string name="durationformatshort_padding_with_0">%2$02d:%5$02d</string>
    <string name="durationformatlong">%1$d:%3$02d:%5$02d</string>
    <string name="photo_adjust">Edit photo</string>
    <string name="select_photo">Photo</string>
    <string name="select_frame">Frame</string>
    <string name="photo_confirm">Confirm</string>
    <string name="photo_load_failed">Failed to load photo!</string>
</resources>
